Addition to fix for bug #12956: cast make differ rounding. - use rint() in some other val_int() methods as well.